--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+*{
+  font-family: 'Quicksand';
+}
+
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  background-color: aliceblue;
 }
 
 @media (prefers-reduced-motion: no-preference) {
